Pagina fachera de Cosminho

--- a/index.html
+++ b/index.html
@@ -1,3 +1,98 @@
-<h1>Sitio web de Lord Cosmo hecho en GitHub Pages</h1>
-<p>Y fue creado con amor para el Curso de Git y Github de Platzi</p>
-<p><img src="https://i.imgur.com/kjKq5Yl.png" /></p>
+<h1></h1>
+<p></p>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cosminho</title>
+</head>
+<body>
+    <div>
+        <h1>Cosmo 🤠👍</h1>
+        <h2>No se como mierda usar CSS XD</h2>
+        <p>
+            Letra:
+Búscame en la noche
+Te espero en mi coche bebe
+Pido un pasaporte
+Por si te vas te voy a ver
+
+Basuras al norte
+Los bichos de oro preste
+Beba mi chain te la preste
+Mi cora yo te lo preste
+
+Mírame a la cara beba
+Ya pasaron meses seguís afuera
+Mi cora rebosando pa amarte nena
+A marte nos vamos a hacer lo que quieras
+
+Pastillas de oro bajo mis venas
+Pa ser mi mafiosa por la noche entera
+Rosando tu ser y todo lo que era
+Le pongo un horario la veo primera
+A mi girl yo la cuido toma mi café
+Si el tiempo fuese plata se lo regale
+Buscaba besos fieles y le pude ceder
+Lo que quiera lo hace y se olvida de el
+Aunque sea desconfiada le dije cree
+Que yo no veo nada feliz la pase
+Que sus piernas temblaban o eso se le ve
+Pero que sea sus besos
+Ven dame placer
+(No se, no se que hacer, que hacer, contigo hoy no se, que hacer, que hacer, que hacer.)
+
+Búscame en la noche
+Te espero en mi coche bebe
+Pido un pasaporte
+Por si te vas te voy a ver
+
+Basuras al norte
+Los bichos de oro preste
+Beba mi chain te la preste
+Mi cora yo te lo preste
+
+Búscame en la noche
+Te espero en mi coche bebe
+Pido un pasaporte
+Por si te vas te voy a ver
+
+Basuras al norte
+Los bichos de oro preste
+Beba mi chain te la preste
+Mi cora yo te lo preste
+
+La tengo acostada del auto a mi cama
+Buscaba de frió y se encontró con calor
+Su voz agitaba
+Mi mente mareada
+Por aceptar la pill que ella me ofreció
+Los ojos cerrados
+Sus besos tan raros
+Simplemente mordía cual cheetah feroz
+Me estrangulaba
+Mi cora asustaba
+La reina del club al loquito durmió
+Parpado cansado
+Todo vomitado
+La tele no estaba ella se la llevo
+No solo la tele sino que mi cora también es testigo de este falso amor
+Prefiero la muerte antes que detenerte llévate todo por amor de dios
+No era inteligente
+No supo que en otra parte del mundo no hay otro como yo
+        </p>
+        <a href="https://www.youtube.com/@smgaby4963">Sigueme en YouTube</a>
+        <div>
+            <form action="">
+                <label for="address">🔥 Ingresa tu direccion:</label>
+                <input type="text" id="address">
+            </form>
+        </div>
+    </div>
+    <img src="https://i.pinimg.com/736x/20/d4/fc/20d4fca082856ca53a33c0caa4f38eb6.jpg" />    
+</body>
+</html>
